--- a/index.html
+++ b/index.html
@@ -11,33 +11,38 @@
     <title>Weather-or-Not</title>
     <link rel="shortcut icon" href="./build/images/jjj.png">
 </head>
+
 <body>
     
-    <div id="sidebar">
-
-        <div id="searchBar">
-            <input id="searchField" type="text" placeholder="City name">
-            <button id="searchButton" type="button">Search</button>
-        </div>
-
-        <div id="savedCities">
-            <!--Generate content-->
-        </div>
-
-    </div>
-
-    <div id="content">
-
-        <div id="current">
-            <!--Generate content-->
-        </div>
-
-        <div id="5day">
-            <!--Generate content-->
-        </div>
-
-    </div>
+    <header>Weather Dashboard</header>
     
+    <section>
+        <div id="sideBar">
+
+            <div id="searchBar">
+                <input id="searchField" type="text" placeholder="City name">
+                <button id="searchButton" type="button">Search</button>
+            </div>
+
+            <div id="savedCities">
+                <!--Generate content-->
+            </div>
+
+        </div>
+
+        <div id="content">
+
+            <div id="current">
+                <!--Generate content-->
+            </div>
+
+            <div id="fiveday">
+                <!--Generate content-->
+            </div>
+
+        </div>
+    </section>
+
     <script
     src="https://code.jquery.com/jquery-3.6.3.min.js"
     integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU="
