cleanup and edit readme

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     
     <!--Change these-->
     <title>Weather-or-Not</title>
-    <link rel="shortcut icon" href="./build/images/jjj.png">
+    <link rel="shortcut icon" href="./build/images/www.png">
 </head>
 
 <body>
